fixed calendar on firefox

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -304,8 +304,6 @@ ul {
 #fullcalendar {
   *, *::before, *::after {
     box-sizing: content-box;
-    margin: revert;
-    padding: revert;
   }
 
   table {
